tests/errors/parsing/006_missing_type_specifier.c
int main(void) {
    register a;
}